fixed spacing

--- a/map.css
+++ b/map.css
@@ -19,6 +19,7 @@ html * {
 
 .contribution {
     width: 800px;
+    height: 400px;
     margin: 5px auto;
     text-align: left;
 }
